cleanup git unused forks
Start using
https://github.com/romaonthego/AFXAuthClient

stop using
https://github.com/Riidr/AFXAuthClient

any custom changes should be taken from @interface PubrontAuthClient : AFXAuthClient

--- a/.gitmodules
+++ b/.gitmodules
@@ -15,4 +15,4 @@
 	url = https://github.com/NimbusKit/sockit.git
 [submodule "Vendor/AFXAuthClient"]
 	path = Vendor/AFXAuthClient
-	url = https://github.com/Riidr/AFXAuthClient.git
+	url = https://github.com/romaonthego/AFXAuthClient.git
