--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "Vendor/SOCKit"]
 	path = Vendor/SOCKit
 	url = https://github.com/NimbusKit/sockit.git
+[submodule "Vendor/AFXAuthClient"]
+	path = Vendor/AFXAuthClient
+	url = https://github.com/romaonthego/AFXAuthClient.git
